hphp/hack/test/pocket_universes/naming/dup_check.bad.php.exp
[(Class
    { c_span = [3:1-11]; c_annotation = (); c_mode = <opaque>;
      c_final = false; c_is_xhp = false; c_kind = Cnormal;
      c_name = ([3:7-8], "\\X");
      c_tparams = { c_tparam_list = []; c_tparam_constraints = <opaque> };
      c_extends = []; c_uses = []; c_use_as_alias = [];
      c_insteadof_alias = []; c_method_redeclarations = [];
      c_xhp_attr_uses = []; c_xhp_category = None; c_reqs = [];
      c_implements = []; c_where_constraints = []; c_consts = [];
      c_typeconsts = []; c_vars = []; c_methods = []; c_attributes = [];
      c_xhp_children = []; c_xhp_attrs = []; c_namespace = <opaque>;
      c_user_attributes = []; c_file_attributes = []; c_enum = None;
      c_pu_enums = []; c_doc_comment = None });
  (Class
     { c_span = [4:1-11]; c_annotation = (); c_mode = <opaque>;
       c_final = false; c_is_xhp = false; c_kind = Cnormal;
       c_name = ([4:7-8], "\\Y");
       c_tparams = { c_tparam_list = []; c_tparam_constraints = <opaque> };
       c_extends = []; c_uses = []; c_use_as_alias = [];
       c_insteadof_alias = []; c_method_redeclarations = [];
       c_xhp_attr_uses = []; c_xhp_category = None; c_reqs = [];
       c_implements = []; c_where_constraints = []; c_consts = [];
       c_typeconsts = []; c_vars = []; c_methods = []; c_attributes = [];
       c_xhp_children = []; c_xhp_attrs = []; c_namespace = <opaque>;
       c_user_attributes = []; c_file_attributes = []; c_enum = None;
       c_pu_enums = []; c_doc_comment = None });
  (Class
     { c_span = [6:1-26:2]; c_annotation = (); c_mode = <opaque>;
       c_final = false; c_is_xhp = false; c_kind = Cnormal;
       c_name = ([6:7-8], "\\A");
       c_tparams = { c_tparam_list = []; c_tparam_constraints = <opaque> };
       c_extends = []; c_uses = []; c_use_as_alias = [];
       c_insteadof_alias = []; c_method_redeclarations = [];
       c_xhp_attr_uses = []; c_xhp_category = None; c_reqs = [];
       c_implements = []; c_where_constraints = []; c_consts = [];
       c_typeconsts = []; c_vars = []; c_methods = []; c_attributes = [];
       c_xhp_children = []; c_xhp_attrs = []; c_namespace = <opaque>;
       c_user_attributes = []; c_file_attributes = []; c_enum = None;
       c_pu_enums = []; c_doc_comment = None })
  ]
Did not typecheck the TAST as there are typing errors.File "dup_check.bad.php", line 9, characters 15-15:
[PocketUniverses] T (case type) is declared multiple times. (Naming[2101])
File "dup_check.bad.php", line 12, characters 12-12:
[PocketUniverses] x (case expression) is declared multiple times. (Naming[2101])
File "dup_check.bad.php", line 17, characters 12-12:
[PocketUniverses] T (A member type) is declared multiple times. (Naming[2101])
File "dup_check.bad.php", line 18, characters 12-12:
[PocketUniverses] T (A member type) is declared multiple times. (Naming[2101])
File "dup_check.bad.php", line 21, characters 7-7:
[PocketUniverses] x (A member expr) is declared multiple times. (Naming[2101])
File "dup_check.bad.php", line 25, characters 8-8:
[PocketUniverses] F (enum) is declared multiple times. (Naming[2101])
